Bug 1334676 - Prevent nsDOMWindowUtils::ZoomToFocusedInput from panning and zooming when focused element is fixed position. r=tnikkel, a=lizzard